@@ -13,6 +13,7 @@ VERSION 2.8
 
   CHANGES:
    * Amarok now depends on Qt 4.8.3.
+   * Amarok now uses FindFFMpeg.cmake from kdelibs
 
 
 VERSION 2.8-Beta 1
